--- a/MyWebsite/appsettings.json
+++ b/MyWebsite/appsettings.json
@@ -7,6 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=Faruk-Abdullah;Database=Website;User=sa;Password=123;Trusted_Connection=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=Faruk-Abdullah;Database=Website;User=sa;Password=123;Trusted_Connection=True;TrustServerCertificate=True;",
+        "WebsiteContext": "Server=Faruk-Abdullah;Database=Website;User=sa;Password=123;TrustServerCertificate=True;"
     }
 }
