before 1st deploy

--- a/MyWebsite/appsettings.json
+++ b/MyWebsite/appsettings.json
@@ -7,7 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=Faruk-Abdullah;Database=Website;User=sa;Password=123;Trusted_Connection=True;TrustServerCertificate=True;",
-        "WebsiteContext": "Server=Faruk-Abdullah;Database=Website;User=sa;Password=123;TrustServerCertificate=True;"
+        "WebsiteContext": "Server=Faruk-Abdullah;Database=Website;User=sa;Password=123;TrustServerCertificate=True;Trusted_Connection=True;"
     }
 }
